Removed state data, scrollbar fix
-Hopefully I can find another source of state data, code for it is still there but commented
-Scrollbar now auto sizes to table width, peak aesthetic

--- a/index.css
+++ b/index.css
@@ -19,7 +19,6 @@ td
 #titlebar
 {
     background: white;
-    width: calc(100% - 17px);
     height: 25px;
     white-space: nowrap;
     font-size: .8vw;
